chamber/styles/base.css
:root {
    --bg: hsl(157, 20%, 98%);
    --fg: hsl(157, 5%, 8%);
    --a-1: hsl(157, 100%, 24%);
    --a-2: hsl(157, 60%, 45%);
    --a-3: hsl(157, 60%, 80%);

    --font-size-0: 16px;
    --font-size-1: 32px;
    --font-size-2: 48px;

    --font-family-0: "Fira Sans", system-ui, sans-serif;
    --font-family-1: "Inter Tight", system-ui, sans-serif;
}

html {
    font-size: var(--font-size-0);
    font-family: var(--font-family-0);
}

body {
    display: grid;
    grid-template-rows: minmax(15vh, 10rem) 1fr minmax(10vh, 15rem);
}

header {
    width: 100%;
    height: 100%;
    background-color: var(--a-1);
}

header section {
    width: 100%;
    margin: 0;
}

header #right {
    display: flex;
    align-self: self-start;
    width: fit-content;
        max-width: 100%;
        flex-direction: row;
}

header #right #social {
    list-style: none;
    display: flex;
}

header #right #social img {
    width: 2rem;
    height: 2rem;
}

header section.nav {
    height: 70%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0;
}

header section.date-display p {
    text-align: center;
    width: 100%;
    max-height: 1rem;
    color: var(--bg)
}

header img.logo {
    max-height: 80%;
    object-fit: contain;
    padding-left: 1rem;
}

nav {
    background-color: var(--a-1);
    padding: 0 2rem;
}

nav ul {
    display: flex;
    list-style: none;
    gap: 1rem;

    flex-direction: column;
}

nav > ul a {
    text-decoration: none;
    color: var(--a-3);
    padding: 0;
    margin: 0 0.5rem;
    border: none;
    transition: 0.2s;
}

nav > ul a.active {
    color: var(--bg);
    border-color: 1px solid var(--bg);
}

nav > ul a:hover {
    border-bottom: 1px solid;
    padding: 0 0.5rem;
    margin: 0;
}

nav.closed li {
    display: none;
}

nav.closed li:first-child {
    display: block;
}

nav .nav-btn {
    border: none;
    background-color: var(--a-3);
    padding: 0.5rem;
    border-radius: 0.5rem;
    width: 100%;
    min-height: 3rem;
    min-width: 3rem;
    font-size: inherit;
    color: var(--a-1);
}

nav.closed .nav-btn::before {
    content: "☰";
}

nav:not(.closed) .nav-btn::before {
    content: "X";
}

nav:not(.closed) {
    align-self: self-start;
    z-index: 999;
    border-radius: 0.5rem;
}

/* Content */
main {
    width: 95%;
    min-height: 0;
    max-height: 100%;
    margin: 0;
    padding: 1rem 2.5%;

    display: grid;
        /* Remember that "join" is hidden on small screens */
        grid-template-rows: repeat(5, minmax(fit-content, 1fr));
    align-items: center;
    gap: 1rem;
}

main > section {
    display: block;
    background-color: var(--a-3);
    color: var(--a-1);
    height: 100%;
    width: 100%;
}

main > section > div {
    min-width: 5rem;
        min-height: 5rem;
    height: 100%;
}

section.spotlights > div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.spotlights > div > section {
    box-shadow: none;
    border-radius: 0;
    border: 1px solid var(--a-1);
    width: 100%;
    height: 100%;
}

.spotlights > div > section + section {
    border-top: none;
}

footer {
    background-color: var(--a-1);
    color: var(--a-3);
    height: 100%;
}

footer section,
footer section div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

footer section + section {
    border-top: 1px solid var(--bg);
    margin-top: 0.4rem;
}

footer section * {
    margin: 0;
}

footer section img {
    max-width: 5rem;
    max-height: 5rem;
    margin: 1rem;
}

section.hero {
    background-image:
        linear-gradient(#fffa, #000a),
        url(https://picsum.photos/800/600);
    background-size: cover;
    background-blend-mode: overlay;
}

section.hero > div {
    display: grid;
    grid-template: 1fr 1fr / 1fr 1fr;
}

section.hero > div > h1 {
    margin-left: 1rem;
    margin-top: 1rem;
}

section.hero > div > div {
    grid-column: 2;
    grid-row: 2;
    display: flex;
    justify-content: end;
    align-items: end;
    margin-right: 1rem;
    margin-bottom: 1rem;
}

section.hero button {
    width: fit-content;
    height: fit-content;
    padding: 1rem;
    border-radius: 0.75rem;
    border: none;
    background: var(--a-1);
    color: var(--bg);
    box-shadow: 2px 2px 5px -3px rgba(0, 0, 0, 0.8);
    transition: 0.2s;
}

section.hero button:hover {
    box-shadow: 2px 2px 12px -4px rgba(0, 0, 0, 0.7);
}


section:not(.hero) > div {
    margin: 0.5rem;
    height: calc(100% - 1rem);
    width: calc(100% - 1rem);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

section > :is(div, div > section) > :is(h1, h2, h3, h4, h5, h6, p) {
    margin: 0.25rem 0;
}

section > div p {
    max-width: 80%;
}

section.spotlights > div > section {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
}

section.spotlights > div > section hr {
    width: 100%;
    border-bottom: 1px solid var(--a-1);
}

section.spotlights > div > section > img {
    max-width: 80%;
}

/* Join is hidden on small screens */
section.join {
    display: none;
}

section.join > div {
    justify-content: space-around;
}

section.join .join-btn {
    padding: 2rem;
    width: 90%;
    border-radius: 0.75rem;
    border: none;
    background: var(--a-1);
    color: var(--bg);
    box-shadow: 2px 2px 5px -3px rgba(0, 0, 0, 0.8);
    transition: 0.2s;
}

section.join .join-btn:hover {
    box-shadow: 2px 2px 12px -4px rgba(0, 0, 0, 0.7);
}

.pic-temp {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.pic-temp img {
    max-width: 50%;
}

.temperature {
    font-weight: bold;
    font-size: 32px;
}

.type-name {
    width: 100%;
    text-align: end;
}

.data {
    width: 100%;
    display: grid;
    grid-template: 1fr 1fr / 1fr 1fr;
}

.data p {
    text-align: center;
}

a {
    color: var(--a-1);
}

a:hover {
    color: var(--a-2);
}

